--- a/index.html
+++ b/index.html
@@ -423,6 +423,8 @@
     <footer class="flex-all-center">
         <p>All rights reserved &copy; Ecstacyonline.com 2022.</p>
     </footer>
+
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
