#3 changes in css and js files location

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecstacy online for fitness clothing, men clothes, women clothes, tops, lowers, shorts, cool fashion, summer
         clothes,</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/responsive.css">
-    <link rel="stylesheet" href="/css/utils.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="utils.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon"
         href="https://icons-for-free.com/iconfiles/png/512/buy+citycons+mall+shopping+icon-1320136423977087098.png"
@@ -424,7 +424,7 @@
         <p>All rights reserved &copy; Ecstacyonline.com 2022.</p>
     </footer>
 
-    <script src="/js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
