changes in css files

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Ecstacy online for fitness clothing, men clothes, women clothes, tops, lowers, shorts, cool fashion, summer
         clothes,</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="responsive.css">
-    <link rel="stylesheet" href="utils.css">
+    <!-- <link rel="stylesheet" href="responsive.css"> -->
+    <!-- <link rel="stylesheet" href="utils.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon"
         href="https://icons-for-free.com/iconfiles/png/512/buy+citycons+mall+shopping+icon-1320136423977087098.png"
