--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         <div class="container">
             <div class="slider">
                 <img src="https://media.istockphoto.com/photos/shot-of-a-group-of-friends-hanging-out-before-working-out-together-picture-id1366052585?b=1&k=20&m=1366052585&s=170667a&w=0&h=tSmN3kW5P3F4jfpdVGU_6odlDHpVTyB-3nKkP8yuKLY="
-                    alt="">
+                    alt="" class="slider-img">
                 <img src="https://media.istockphoto.com/photos/young-beautiful-girl-is-possing-with-her-shopping-bags-in-a-boutique-picture-id691280118?k=20&m=691280118&s=612x612&w=0&h=KTjC_k8VvOL4haHF5yT-KATsPq7HT0BpyJ9-4rzwqFg="
                     alt="">
                 <img src="https://media.istockphoto.com/photos/young-attractive-happy-couple-hugging-smiling-and-holding-shopping-picture-id1277267181?b=1&k=20&m=1277267181&s=170667a&w=0&h=Ikff2jc6Trv2shwsCOJBIG8Rdgyd7VzWtI0Ihyk8Go8="
-                    alt="">
+                    alt="" class="slider-img">
             </div>
 
             <div class="view-line text-center">
